# fdm-heat-equation-solver

./: CMakeLists.txt  README.md  compile.sh
project/: CMakeLists.txt  main.cpp
project/include/: model.hpp  plotter.hpp  shared.hpp  solver.hpp
project/source/: model.cpp  plotter.cpp  solver.cpp
